Bug 385889 - Kdev-Xdebug enters to a loop when an invalid variable is inspected
Summary: Kdev-Xdebug enters to a loop when an invalid variable is inspected
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: PHP (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-18 06:22 UTC by Waldo Cancino
Modified: 2017-10-24 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Waldo Cancino 2017-10-18 06:22:09 UTC
Hello,

I use the Xdebug Kdevelop plugin in both 4.x and 5.x (master). When I try to evaluate an expression in Xdebug ( i.e. $a+$b ), the debugger enter in a loop and renders the interface unresponsive. The same happens if, for instance, I make a typo in the variable name. This problems seems to happen only in the Xdebug component, I try the same in c/python debuggers an error is displayed when typing an invalid expression.

Simple way to reproduce it

<?php
/**
 * Documentation, License etc.
 *
 * @package phptemplate
 */

$a = 1;
$b = 2;
echo("SUM = ".($a+$b) );

?>

Breakpoint on the echo line, then start xdebug and type "c" in the variable inspector ==> unresponsive interface.
Comment 1 Kevin Funk 2017-10-19 10:28:27 UTC
Heya Waldo, the kdev-xdebug component unfortunately isn't very well maintained. If you could have a look at the issue yourself, that'd be appreciated.

Learn more how to contribute here: 
  https://www.kdevelop.org/contribute-kdevelop
Comment 2 Kevin Funk 2017-10-24 16:26:47 UTC
Git commit 8d7c15e54147176bb21bc8755babced75eb3b52d by Kevin Funk, on behalf of Waldo Cancino.
Committed on 24/10/2017 at 16:26.
Pushed by kfunk into branch 'master'.

Do not emit statechanged when state has not changed

This correct the loop in Xdebug plugin

Reviewers: kfunk, apol

Reviewed By: apol

Subscribers: apol, ngraham, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D8448

M  +3    -2    connection.cpp

https://commits.kde.org/kdev-xdebug/8d7c15e54147176bb21bc8755babced75eb3b52d