Do not emit statechanged when state has not changed

BUG: 385889

This correct the loop in Xdebug plugin

Reviewers: kfunk, apol

Reviewed By: apol

Subscribers: apol, ngraham, kdevelop-devel

Differential Revision: https://phabricator.kde.org/D8448